# scrapper

./: .gitignore  CMakeLists.txt  README.md
scripts/: compile.py
src/: CMakeLists.txt
src/core/: CMakeLists.txt  algorithm.cpp  json.cpp  logger.cpp  regex.cpp  regex.h  threadpool.cpp  timer.cpp  timer.h  timer_factory.cpp
src/core/include/core/: algorithm.h  json.h  logger.h  threadpool.h  timer_factory.h
src/core/include/core/interface/: json_interface.h  logger_interface.h  regex_interface.h  threadpool_interface.h  timer_interface.h
src/core/include/core/interface/net/: client_interface.h  context_manager_interface.h  request_handler_interface.h  response_handler_interface.h  server_interface.h
src/core/include/core/net/: context_manager.h  define.h  http_request_handler.h
src/core/net/: context_manager.cpp  http_request_handler.cpp  http_server.cpp  http_server.h  secure_http_client.cpp  secure_http_client.h
src/scrapper/: CMakeLists.txt  main.cpp
src/scrapper/config/: config.cpp  config.h
src/scrapper/config/interface/: config_interface.h
src/scrapper/engine/: engine.cpp  engine.h  scrape_manager.cpp  scrape_manager.h  scrape_manager_interface.h
src/scrapper/handler/: healthcheck_handler.cpp  healthcheck_handler.h  registration_handler.cpp  registration_handler.h  scrape_handler.cpp  scrape_handler.h
src/scrapper/protocol/: healthcheck.cpp  healthcheck.h  json_decoder.cpp  json_decoder.h  protocol_interface.h  registration.cpp  registration.h
